--- a/root_directory/website/package.json
+++ b/root_directory/website/package.json
@@ -6,9 +6,11 @@
     "publish-gh-pages": "docusaurus-publish",
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
-    "rename-version": "docusaurus-rename-version"
+    "rename-version": "docusaurus-rename-version",
+    "deploy": "gh-pages -d /build/technical_reading_basic"
   },
   "devDependencies": {
-    "docusaurus": "^1.7.2"
+    "docusaurus": "^1.7.2",
+    "gh-pages": "^2.0.1"
   }
 }
